# TeleInfoMonitor

./: .gitignore  Changelog.md  README.md  TeleInfoMonitor.pyproject  pyproject.toml  requirements.txt
data/: teleinfo_sample.txt
src/: tele_info_monitor.py
src/data/: tele_info_data.py  tele_info_data_parser.py  teleinfo_format_error.py
src/io/: socket_client.py
src/model/: model.py  tele_info_data.py  tele_info_data_parser.py
src/ui/: controller.py  current_plot_view.py  main_window.py
src/util/: data_file_helpers.py  logger.py
teleinfomonitor/: __main__.py
teleinfomonitor/database/: database_client.py  database_controller.py  database_error.py
teleinfomonitor/io/: socket_client.py
teleinfomonitor/model/: model.py  tele_info_data.py  tele_info_data_parser.py
teleinfomonitor/ui/: controller.py  current_plot_view.py  main_window.py  monthly_power_usage_tab_view.py  power_usage_plot_view.py  real_time_data_tab_view.py  settings_dialog.py
teleinfomonitor/ui/design/: main_window.ui  settings_dialog.ui  ui_resource_file.py
teleinfomonitor/util/: logger.py
test/data/: test_tele_info_data_parser.py
tools/TeleInfoReader/: requirements.txt
tools/TeleInfoReader/src/: model.py  tele_info_reader.py
tools/TeleInfoReader/src/database/: database_client.py
tools/TeleInfoReader/src/util/: logger.py  tele_info_helpers.py
